automation-vpc.tf
resource "aws_vpc" "week5" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "week5"
  }
}
